# woah

./: .README.md.kate-swp  .gitignore  CMakeLists.txt  Cargo.toml  README.md  aptman.kdev4  gitflow.sh  notes.md
.kdev4/: aptman.kdev4
csrc/: apt.cpp  main.cpp  parse_cmd.cpp
dep/: CMakeLists.txt  Findapt-pkg.cmake
include/: parse_cmd.h  parsing_structs.h
src/: .apt.cpp.kate-swp  .main.c.kate-swp  CMakeLists.txt  apt.c  apt.cpp  apt.h  main.c  main.cpp  main.rs  operation.rs  parse_args.rs  parse_cmd.c  parse_cmd.cpp  parse_flags.rs  parsing_structs.h
